5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1875_1709.log
== TEST (2019-07-02 18:06:25) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:06:30) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:06:35) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:09:22) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- EXECUTION TIME:
1.07609
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
5.33
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.44
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
4.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:09:32) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")))
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:11:07) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")))
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:12:39) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- EXECUTION TIME:
0.931798
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
5.33
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.44
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
4.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:18:40) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:02) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum(mat)
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:06) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum[1,j]
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:07) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
s= sum[:,1]
media=s/size(mat)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:56) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shate [1]
s=0
for i in range (l)
	s=s+[3,:]
media=s/3
print(round(media,2))
-- ERROR:
File "XXXX", line 8
    for i in range (l)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:59) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shate [1]
s=0
for i in range (l)
	s=s+[3,:]
media=s/3
print(round(media,2))
-- ERROR:
File "XXXX", line 8
    for i in range (l)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:05) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shate [1]
s=0
for i in range (l):
	s=s+[3,:]
media=s/3
print(round(media,2))
-- ERROR:
File "XXXX", line 9
    s=s+[3,:]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:18) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shate [1]
s=0
for i in range (l):
	s=s+[3,i]
media=s/3
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:36) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shape [1]
s=0
for i in range (l):
	s=s+[3,i]
media=s/3
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:23) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shape [1]
s=0
for i in range (l):
	s=s+[1,i]
	
media=s/3
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:44:01) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
l=mat.shape [0]
c=mat.shape [1]
s=0
for i in range (l):
	s=s+mat[1,i]
	
media=s/3
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:47:33) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
aluno=input("numero de aluno: ")
c=mat.shape [1]
s=sum(mat[aluno,:])	
media=s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:47:58) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
a=input("numero de aluno: ")
c=mat.shape [1]
s=sum(mat[a,:])	
media=s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:48:29) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
a=input("numero de aluno: ")
c=mat.shape [1]
s=sum(mat[a,:])	
media=s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:49:28) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
a=int(input("numero de aluno: "))
c = mat.shape [1]
s= sum(mat[a,:])	
media= s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:50:08) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")),dtype=int)
a=int(input("numero de aluno: "))
c = mat.shape [1]
s= sum(mat[a,:])	
media= s/c
print(round(media,2))
-- EXECUTION TIME:
0.868235
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
4.33
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.33
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:50:19) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = mat.shape [1]
s= sum(mat[a,:])	
media= s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:50:30) 
-- CODE:
from numpy import *
from numpy.linalg import*
mat=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = mat.shape [1]
s= sum(mat[a,:])	
media= s/c
print(round(media,2))
-- EXECUTION TIME:
1.0133
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
4.87
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.9
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.38
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:06) 
-- CODE:
from numpy import *
from numpy.linalg import*
matriz=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = matriz.shape [1]
s= sum(matriz[a,:])	
media= s/c
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:51:18) 
-- CODE:
from numpy import *
from numpy.linalg import*
matriz=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = matriz.shape [1]
s= sum(matriz[a,:])	
media= s/c
print(round(media,2))
-- EXECUTION TIME:
1.06629
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
4.87
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.9
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.38
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:30) 
-- CODE:
from numpy import *
from numpy.linalg import*
matriz=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = matriz.shape [1]
s= sum(matriz[a,:])	
media= s/c
print(round(media))
-- EXECUTION TIME:
1.12259
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
5.0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
5.0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:38) 
-- CODE:
from numpy import *
from numpy.linalg import*
matriz=array(eval(input("digite a matriz de notas: ")))
a=int(input("numero de aluno: "))
c = matriz.shape [1]
s= sum(matriz[a,:])	
media= s/c
print(round(media,2))
-- EXECUTION TIME:
1.02677
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
4.87
---- user output:
4.87
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
2
---- correct output:
4.9
---- user output:
4.9
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
3
---- correct output:
2.38
---- user output:
2.38
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
